--- a/Homeworks/Homework-1/Homework-1.Rmd
+++ b/Homeworks/Homework-1/Homework-1.Rmd
@@ -45,11 +45,28 @@ df <- data.frame(df)
 
 ## Data Exploration:
 
-```{r dimensions, echo=F}
-dim = dim(df)
+The original training dataset consists of 17 elements and a total of 2276 observations. Among these elements, `INDEX` is merely an index value utilized for sorting, while `TARGET_WINS` serves as the response variable for our regression models. The remaining 15 elements represent potential predictor variables for our linear models. Below is a summary table for the dataset.
 
-print(glue("The dataset consists of {dim[1]} observations of {dim[2]} variables."))
-```
+
+|variables       | n     | mean | sd   | med  | min  | max   | range |  skew | kurtosis | se    | NAs
+|--------------  | ----- | ---- | ---- | ---- | ---- | ----- | ----- | ----- | -------  | ----- | ---
+|TARGET_WINS     | 2276  |   81 |   16 |   82 |    0 |   146 |   146 | -0.40 |   1.03   |  0.33 |    
+|TEAM_BATTING_H  | 2276  | 1470 |  145 | 1454 |  891 |  2554 |  1663 |  1.57 |   7.28   |  3.03 |    
+|TEAM_BATTING_2B | 2276  |  241 |   47 |  238 |   69 |   458 |   389 |  0.22 |   0.01   |  0.98 |     
+|TEAM_BATTING_3B | 2276  |   55 |   28 |   47 |    0 |   223 |   223 |  1.11 |   1.50   |  0.59 |    
+|TEAM_BATTING_HR | 2276  |  100 |   61 |  102 |    0 |   264 |   264 |  0.19 |  -0.96   |  1.27 |    
+|TEAM_BATTING_BB | 2276  |  502 |  123 |  512 |    0 |   878 |   878 | -1.03 |   2.18   |  2.57 |     
+|TEAM_BATTING_SO | 2174  |  736 |  240 |  750 |    0 |  1399 |  1399 | -0.30 |  -0.32   |  5.33 |  102
+|TEAM_BASERUN_SB | 2145  |  125 |   88 |  101 |    0 |   697 |   697 |  1.97 |   5.49   |  1.90 |  131  
+|TEAM_BASERUN_CS | 1504  |   53 |   23 |   49 |    0 |   201 |   201 |  1.98 |   7.62   |  0.59 |  772
+|TEAM_BATTING_HBP|  191  |   59 |   13 |   58 |   29 |    95 |    66 |  0.32 |  -0.11   |  0.94 | 2085
+|TEAM_PITCHING_H | 2276  | 1779 | 1407 | 1518 | 1137 | 30132 | 28995 | 10.33 | 141.84   | 29.49 |     
+|TEAM_PITCHING_HR| 2276  |  106 |   61 |  107 |    0 |   343 |   343 |  0.29 |  -0.60   |  1.28 |      
+|TEAM_PITCHING_BB| 2276  |  553 |  166 |  536 |    0 |  3645 |  3645 |  6.74 |  96.97   |  3.49 |      
+|TEAM_PITCHING_SO| 2174  |  818 |  553 |  813 |    0 | 19278 | 19278 | 22.17 | 671.19   | 11.86 |  102
+|TEAM_FIELDING_E | 2276  |  246 |  228 |  159 |   65 |  1898 |  1833 |  2.99 |  10.97   |  4.77 |      
+|TEAM_FIELDING_DP| 1990  |  146 |   26 |  149 |   52 |   228 |   176 | -0.39 |   0.18   |  0.59 |  286
+
 
 The variables and their definitions can be seen below:
 
@@ -73,10 +90,9 @@ Variable|Definition
 `TEAM_PITCHING_HR`|Homeruns allowed
 `TEAM_PITCHING_SO`|Strikeouts by pitchers
 
-`INDEX` serves as an identifier and shouldn't be incorporated into the linear regression model.
 
 ```{r train-data, echo=FALSE}
-set.seed(42)
+set.seed(30)
 
 # Adding a 20% holdout of our input data for model evaluation later
 train <- subset(df[sample(1:nrow(df)), ], select=-c(TEAM_BATTING_HBP))%>%
@@ -643,11 +659,24 @@ The RMSE for each models are:
 - $M_{transformed} = 13.40541$
 - $M_{select} = 13.7739$
 
+```{r}
+library(knitr)
+
+# Create a dataframe with model names and RMSE values
+model_rmse <- data.frame(
+  Model = c("M_{reduced}", "M_{offensive}", "M_{transformed}", "M_{select}"),
+  RMSE = c(13.16778, 13.17077, 13.40541, 13.7739)
+)
+
+# Print the table
+kable(model_rmse, format = "markdown")
+```
+
+
 
 ## Appendix: Report Code
 
 Below is the code for this report to generate the models and charts above.
 
-	```{r ref.label=knitr::all_labels(), echo=TRUE, eval=FALSE}
+```{r ref.label=knitr::all_labels(), echo=TRUE, eval=FALSE}
 	```
- 
