--- a/Homeworks/Homework-2/Homework-2.Rmd
+++ b/Homeworks/Homework-2/Homework-2.Rmd
@@ -18,4 +18,86 @@ library(tidyverse)
 library(openintro)
 ```
 
+```{r warning = FALSE, message = FALSE}
+library(tidyverse)
+library(geomtextpath)
+```
 
+## Overview:
+
+This homework assignment will guide you through different classification metrics. Your task involves developing functions in R to perform diverse calculations. Furthermore, you'll explore functions within packages to achieve comparable results. Lastly, you'll generate graphical representations useful for evaluating classification model outputs, including those from binary logistic regression.
+
+## Supplemental Material:
+
+* Applied Predictive Modeling, Ch. 11 (provided as a PDF file).
+
+* Web tutorials: http://www.saedsayad.com/model_evaluation_c.htm
+
+## Deliverables (100 Points):
+
+* Upon following the instructions below, use your created R functions and the other packages to generate the classification metrics for the provided data set. A write-up of your solutions submitted in PDF format.
+
+## Instructions:
+
+Complete each of the following steps as instructed:
+
+1. Download the classification output data set (attached in Blackboard to the assignment).
+
+```{r}
+class_df <- as.data.frame(read.csv('https://raw.githubusercontent.com/waheeb123/Data-621/main/Homeworks/Homework-2/classification-output-data.csv'))
+head(class_df)
+```
+
+The dataset provided includes several attributes to predict whether or not a patient has diabetes. 
+
+2. The data set has three key columns we will use:
+
+    a. class: the actual class for the observation
+
+    b. scored.class: the predicted class for the observation (based on a threshold of $0.5$)
+
+    c. scored.probability: the predicted probability of success for the observation
+
+Use the table() function to get the raw confusion matrix for this scored dataset. Make sure you understand the output. In particular, do the rows represent the actual or predicted class? The columns?
+
+3. Write a function that takes the data set as a dataframe, with actual and predicted classifications identified, and returns the accuracy of the predictions.
+
+$$Accuracy = \frac{TP + TN}{TP + FP + TN + FN}$$
+
+
+4. Write a function that takes the data set as a dataframe, with actual and predicted classifications identified, and returns the classification error rate of the predictions.
+
+$$Classification\text{ }Error\text{ }Rate = \frac{FP + FN}{TP + FP + TN + FN}$$
+
+5. Write a function that takes the data set as a dataframe, with actual and predicted classifications identified, and returns the precision of the predictions.
+
+$$Precision = \frac{TP}{TP + FP}$$
+
+
+6. Write a function that takes the data set as a dataframe, with actual and predicted classifications identified, and returns the sensitivity of the predictions. Sensitivity is also known as recall.
+
+$$Sensitivity = \frac{TP}{TP + FN}$$
+
+7. Write a function that takes the data set as a dataframe, with actual and predicted classifications identified, and returns the specificity of the predictions.
+
+$$Specificity = \frac{TN}{TN + FP}$$
+
+
+8. Write a function that takes the data set as a dataframe, with actual and predicted classifications identified, and returns the F1 score of the predictions.
+
+$$F1\text{ }Score = \frac{2 \times Precision \times Sensitivity}{Precision + Sensitivity}$$
+
+
+9. Before we move on, let’s consider a question that was asked: What are the bounds on the F1 score? Show that the F1 score will always be between $0$ and $1$. (Hint: If $0 < a < 1$ and $0 < b < 1$ then $ab < a$.)
+
+
+10. Write a function that generates an ROC curve from a data set with a true classification column (class in our example) and a probability column (scored.probability in our example). Your function should return a list that includes the plot of the ROC curve and a vector that contains the calculated area under the curve (AUC). Note that I recommend using a sequence of thresholds ranging from 0 to 1 at 0.01 intervals.
+
+
+11. Use your created R functions and the provided classification output data set to produce all of the classification metrics discussed above.
+
+
+12. Investigate the caret package. In particular, consider the functions confusionMatrix, sensitivity, and specificity. Apply the functions to the data set. How do the results compare with your own functions?
+
+
+13. Investigate the pROC package. Use it to generate an ROC curve for the data set. How do the results compare with your own functions?
