--- a/Final Project/Final Project Proposal.Rmd
+++ b/Final Project/Final Project Proposal.Rmd
@@ -44,9 +44,9 @@ There are several predictor variables of interest to us. The NYC School Quality 
 
 In addition, it'd be interesting to see if these ratings could be replaced by proxy variables? Doing so could save the Department of Education (DOE) time in not assigning ratings when they could have similar impact by knowing certain values for a school.
 
-Our response variable will be the average student's SAT Score at a given school. SAT Scores are an imperfect metric given their [correlation with other socioeconomic factors](https://www.manhattanreview.com/sat-predictor-college-success/), but for our purposes can serve as an imperfect benchmark to measure academic performance.
+Our response variable will be the average student's SAT Score at a given school. SAT Scores are an imperfect metric given their [correlation with other socioeconomic factors](https://files.eric.ed.gov/fulltext/ED563073.pdf), but for our purposes can serve as an imperfect benchmark to measure academic performance.
 
-**Main research question:** Do these DOE-ratings accurately predict whether a school will foster high academic performance in students, and are there other proxy variables that can be used to more accurately predict academic performance (measured in SAT scores)
+**Main research question:** Are DOE ratings effective predictors of a school's ability to cultivate high academic achievement in students, and what alternative proxy variables offer improved accuracy in predicting academic performance, as assessed by SAT scores?
 
 
 
