Update Final Project Proposal.Rmd

--- a/Final Project/Final Project Proposal.Rmd
+++ b/Final Project/Final Project Proposal.Rmd
@@ -21,6 +21,25 @@ knitr::opts_chunk$set(echo = FALSE)
 library(tidyverse)
 library(modelr)
 library(glue)
+library(tidyverse)
+library(DataExplorer)
+library(knitr)
+library(cowplot)
+library(finalfit)
+library(correlationfunnel)
+library(ggcorrplot)
+library(RColorBrewer)
+library(naniar)
+library(mice)
+library(MASS)
+select <- dplyr::select
+library(kableExtra)
+library(car)
+library(glmtoolbox)
+library(pROC)
+library(caret)
+library(robustbase)
+library(corrplot)
 ```
 
 
